--- a/package.json
+++ b/package.json
@@ -12,10 +12,9 @@
     "bootstrap": "^5.1.3",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^6.2.3",
-    "gh-pages": "^3.2.3",
     "history": "^5.2.0",
     "react": "^17.0.2",
-    "react-bootstrap": "^2.1.2",
+    "react-bootstrap": "^2.3.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
@@ -46,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
